# tattoo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  tattoo.exe.manifest
.github/workflows/: ci.yml  rust.yml
docs/: how_to_get_device_information.md  status_entrypoint_not_found.md  where_to_store_data.md
lib/device_manager/: Cargo.toml  LICENSE.MD  README.md
lib/device_manager/src/: lib.rs  registry.rs  system.rs
lib/device_manager/src/registry/: asset_tag.rs  manufacturer.rs  model.rs  serial_number.rs  status.rs
lib/device_manager/src/system/: manufacturer.rs  model.rs  serial_number.rs
src/: build.rs  device.rs  lib.rs  main.rs  registry.rs  rights.rs  ui.rs
src/device/: assettag.rs  database.rs  help.rs  make.rs  model.rs  serialnumber.rs
src/registry/: assettag.rs  make.rs  model.rs  serialnumber.rs
ui/: AppWindow.slint  AppWindow.slint.old  Notification.slint
