[package]
name = "tattoo"
version = "0.4.3"
edition = "2021"
authors = [ "Joshua Winters-Brown" ]
readme = "README.md"
description = "Automatically collect device information on run, and insert it into the registry of the device."
repository = "https://github.com/ofgrenudo/tattoo"
license-file = "LICENSE.md"

[lib]
name = "tattoo_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"
winreg = "0.50.0"
