[package]
name = "tattoo"
version = "0.4.4"
edition = "2021"
authors = [ "Joshua Winters-Brown" ]
readme = "README.md"
description = "Automatically collect device information on run, and insert it into the registry of the device."
repository = "https://github.com/ofgrenudo/tattoo"
license-file = "LICENSE.md"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
device_manager = { path = "lib/device_manager"}
slint = "1.3.2"

[build-dependencies]
slint-build = "1.3"
